# context-steward

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SESSION_SUMMARY.md  package-lock.json  package.json  repomix-output.xml  tsconfig.json
examples/: basic.py  basic.ts  claude-desktop-config.json  feedback-loop.ts  programmatic-usage.ts
python/: pyproject.toml
python/context_steward/: __init__.py  context_manager.py  file_externalizer.py  steward.py  telemetry.py  text_optimizer.py  tool_consolidator.py  types.py
python/context_steward.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skills/coding/: SKILL.md
skills/design/: SKILL.md
skills/ops/: SKILL.md
skills/typescript/: SKILL.md
src/: index.ts  server.ts  types.ts
src/adapters/: anthropic.ts  base.ts  gemini.ts  ollama.ts  openai.ts
src/core/: context-manager.ts  context-steward.ts  file-externalizer.ts  outcome-store.ts  pack-builder.ts  skill-auditor.ts  skill-fetch.ts  skill-fs.ts  skill-install.ts  skill-loader.ts  skill-matcher.ts  skill-parser.ts  skill-scorer.ts  telemetry.ts  text-optimizer.ts  token-estimator.ts  tool-consolidator.ts
src/core/utils/: fetch-url.test.ts  fetch-url.ts
