[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-steward"
version = "0.1.0"
description = "Universal LLM Context Optimization - 90% Token Reduction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bouletteproof", email = "hello@bouletteproof.com"}
]
keywords = [
    "llm", "token", "optimization", "context", "openai", 
    "anthropic", "claude", "gpt", "gemini", "ollama", "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/bouletteproof/context-steward"
Documentation = "https://github.com/bouletteproof/context-steward#readme"
Repository = "https://github.com/bouletteproof/context-steward.git"
Issues = "https://github.com/bouletteproof/context-steward/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
